<resources>
    <string name="app_name">Aston_Intensiv_4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Пользователи</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="save">Сохранить</string>
    <string name="back">Назад</string>
    <string name="phone">Phone:</string>
    <string name="lastname">LastName:</string>
    <string name="name">Name:</string>
</resources>